# grecov

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  pyproject.toml
.github/workflows/: build.yml  ci.yml  pages.yml  test.yml
docs/: index.html  sw.js
exps/: bench_bfs.py  figures.py
profiling/: bench_bfs.py  bench_pyodide.py  profile_bfs.py
r-package/: DESCRIPTION  NAMESPACE
r-package/R/: bfs.R
r-package/tests/testthat/: test-bfs.R
src/ext/: grecov_ext.cpp
src/grecov/: __init__.py  bfs.py  jeffreys_ci.py  profile_ci.py  solver.py
tests/: test_bfs.py  test_coverage.py  test_coverage_fn.py  test_cp.py  test_gradients.py  test_interfaces.py  test_iter.py
