[build-system]
requires = ["scikit-build-core>=0.10", "nanobind>=2.0"]
build-backend = "scikit_build_core.build"

[project]
name = "grecov"
version = "0.2.0"
description = "Exact confidence intervals for multinomial distributions via Neyman construction"
requires-python = ">=3.12"
license = "MIT"
readme = "README.md"
authors = [
    { name = "Louis Abraham", email = "louis.abraham@yahoo.fr" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: C++",
    "Topic :: Scientific/Engineering :: Mathematics",
]
urls = { Homepage = "https://github.com/louisabraham/grecov" }
dependencies = [
    "numpy>=1.20",
    "scipy>=1.7",
]

[project.optional-dependencies]
ipopt = ["cyipopt>=1.3; platform_system != 'Emscripten'"]
test = ["pytest>=7.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.scikit-build]
wheel.packages = ["src/grecov"]
cmake.build-type = "Release"

[tool.scikit-build.cmake.define]
CMAKE_INTERPROCEDURAL_OPTIMIZATION = "ON"
